--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+
+
+    //网络
+    implementation("com.squareup.okhttp3:okhttp:3.12.0")
 }
