--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,13 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
+# Gradle version
+compile_sdk_version=28
+build_tools_version=28.0.0
+target_sdk_version=28
+min_sdk_version=16
+version_code=1
+version_name=1.0
+#supportø‚“¿¿µ
+support_group=com.android.support
+support_version=28.+
