--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--    android:networkSecurityConfig="@xml/network_security_config"-->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
