--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation project(path: ':mvp')
     implementation project(path: ':http')
     implementation project(path: ':task')
+    implementation project(path: ':refresh')
 }
