自定义 APT注解 有些许小问题，待调试

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':mvp', ':http', ':task', ':refresh'
+include ':app', ':mvp', ':http', ':task', ':refresh', ':annotation', ':apt'
 rootProject.name='TodayInfomation'
