--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ dependencies {
     //网络
     implementation("com.squareup.okhttp3:okhttp:3.12.0")
 
+
+    // apt
+    implementation project(path: ':annotation')
+    annotationProcessor project(path: ':apt')
+
     // module 的依赖引入
     implementation project(path: ':mvp')
     implementation project(path: ':http')
