--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,8 @@
-include ':app', ':mvp', ':http', ':task', ':refresh', ':annotation', ':apt'
+include ':app',
+        ':mvp',
+        ':http',
+        ':task',
+        ':refresh'
+//        ':annotation',
+//        ':apt'
 rootProject.name='TodayInfomation'
