异常处理及日志文件系统写入本地cache文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation project(path: ':http')
     implementation project(path: ':task')
     implementation project(path: ':refresh')
-
+//    implementation "com.github.yoyo0316:GodRefresh:v1.0.0"
 
     // leakcanary 集成
     // debugImplementation because LeakCanary should only run in debug builds.
