--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <!--    android:networkSecurityConfig="@xml/network_security_config"-->
 
     <application
-        android:name=".base.Test"
+        android:name=".base.TodayInformationApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
