--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation project(path: ':http')
     implementation project(path: ':task')
     implementation project(path: ':refresh')
+    implementation project(path: ':player')
 //    implementation "com.github.yoyo0316:GodRefresh:v1.0.0"
 
     // leakcanary 集成
