apt 注解代码上上传

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,8 @@ dependencies {
 
 
     // apt
-//    implementation project(path: ':annotation')
-//    annotationProcessor project(path: ':apt')
+    implementation project(path: ':annotation')
+    annotationProcessor project(path: ':apt')
 
     // module 的依赖引入
     implementation project(path: ':mvp')
