--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ include ':app', ':player',
         ':mvp',
         ':http',
         ':task',
-        ':refresh'
-//        ':annotation',
-//        ':apt'
+        ':refresh',
+        ':annotation',
+        ':apt'
 rootProject.name='TodayInfomation'
