--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
 
         <activity android:name=".main.MainActivity" />
         <activity android:name=".main.fragment.shanghai.view.ShanghaiDetailActivity" />
+
+        <!--播放器配置信息 -->
+        <meta-data android:name="playertype"
+            android:value="1" />
     </application>
 
 </manifest>
