--- a/player/build.gradle
+++ b/player/build.gradle
@@ -28,4 +28,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.11.4'
 }
