多进程通讯：使用系统四大组件之一广播分发机制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,10 @@
         </activity>
 
         <activity android:name=".main.MainActivity" />
-        <activity android:name=".main.fragment.shanghai.view.ShanghaiDetailActivity" />
+        <activity
+            android:process=":shanghai.detail"
+            android:name=".main.fragment.shanghai.view.ShanghaiDetailActivity" />
+
 
         <!--播放器配置信息 -->
         <meta-data android:name="playertype"
