多进程通讯：使用系统四大组件之一内容提供者

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
             android:process=":shanghai.detail"
             android:name=".main.fragment.shanghai.view.ShanghaiDetailActivity" />
 
-
+        <provider
+            android:authorities="com.yoyozhangh.github.todayinfomation.process.data"
+            android:name=".main.fragment.beijing.MainProcessDataProvider"/>
         <!--播放器配置信息 -->
         <meta-data android:name="playertype"
             android:value="2" />
