多进程通讯：使用系统四大组件之一远程服务

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <provider
             android:authorities="com.yoyozhangh.github.todayinfomation.process.data"
             android:name=".main.fragment.beijing.MainProcessDataProvider"/>
+
+        <service android:name=".main.fragment.beijing.MainProcessService"/>
         <!--播放器配置信息 -->
         <meta-data android:name="playertype"
             android:value="2" />
