IPC通信框架：基于 AIDL 的 C/S 架构同步、异步请求封装

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation project(path: ':task')
     implementation project(path: ':refresh')
     implementation project(path: ':player')
+    implementation project(path: ':ipc')
 //    implementation "com.github.yoyo0316:GodRefresh:v1.0.0"
 
     // leakcanary 集成
