--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- 9.0 适配-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <!--    android:networkSecurityConfig="@xml/network_security_config"-->
 
